# fblln.github.io

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html  robots.txt  sitemap.xml  styles.css
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
assets/articles/: README.md
backlog/: config.yml
backlog/tasks/: task-1 - Adopt-self-hosted-type-system-Archivo-JetBrains-Mono.md  task-10 - Scaffold-Playwright-headless-integration-tests.md  task-11 - Decompose-src-main.rs-monolith-into-modules.md  task-12 - Backfill-wide-why-what-block-comments.md  task-2 - Add-mobile-navigation.md  task-3 - Reduce-blanket-uppercase-restore-case-hierarchy.md  task-4 - Tighten-hero-vertical-rhythm.md  task-5 - Strengthen-grid-hairlines.md  task-6 - Add-visible-focus-visible-states.md  task-7 - Add-justfile-as-the-command-runner.md  task-8 - Enforce-100-unit-test-coverage-gate.md  task-9 - Add-mutation-testing-for-invariants.md
content/articles/: 2026-07-18-rust-python-terrain-rastering.md  2026-07-19-architecture-must-follow-pressure.md
content/articles/drafts/: 2026-07-17-surviving-production.md
design-system/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
design-system/.design-sync/: NOTES.md  config.json  conventions.md
design-system/.storybook/: main.ts  preview.tsx
design-system/src/: index.ts
design-system/src/components/ArticleHeader/: ArticleHeader.css  ArticleHeader.stories.tsx  ArticleHeader.tsx
design-system/src/components/Button/: Button.css  Button.stories.tsx  Button.tsx
design-system/src/components/Callout/: Callout.css  Callout.stories.tsx  Callout.tsx
design-system/src/components/CodeBlock/: CodeBlock.css  CodeBlock.stories.tsx  CodeBlock.tsx
design-system/src/components/DiagnosticsPanel/: DiagnosticsPanel.css  DiagnosticsPanel.stories.tsx  DiagnosticsPanel.tsx
design-system/src/components/ImpactStat/: ImpactStat.css  ImpactStat.stories.tsx  ImpactStat.tsx
design-system/src/components/Metric/: Metric.css  Metric.stories.tsx  Metric.tsx
design-system/src/components/NavBar/: NavBar.css  NavBar.stories.tsx  NavBar.tsx
design-system/src/components/ProjectRow/: ProjectRow.css  ProjectRow.stories.tsx  ProjectRow.tsx
design-system/src/components/Prose/: Prose.css  Prose.stories.tsx  Prose.tsx
design-system/src/components/SectionHeading/: SectionHeading.css  SectionHeading.stories.tsx  SectionHeading.tsx
design-system/src/components/SiteFooter/: SiteFooter.css  (+2 more)
design-system/src/foundations/: Foundations.stories.tsx
design-system/src/styles/: fonts.css  global.css  tokens.css
shared/: header.css  navigation.rs  typography.css
src/: articles.rs  boot.rs  lib.rs  main.rs  projects.rs  runtime.rs
tools/: minify.sh  post-build.sh
tools/blog/: Cargo.toml  article.css
tools/blog/src/: main.rs
tools/site/: Cargo.toml
tools/site/src/: main.rs
(+9 files in other folders)
