[package]
name = "fblln-portfolio"
version = "0.1.0"
edition = "2024"
description = "Fabio Ellena's full Rust/WebAssembly engineering portfolio"
license = "MIT"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Navigator",
    "Performance",
    "PerformanceResourceTiming",
    "Window",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

